--- a/ai/ai2html-config.json
+++ b/ai/ai2html-config.json
@@ -5,7 +5,19 @@
     {
       "aifont": "Roboto-Regular",
       "family": "Roboto,arial,helvetica,sans-serif",
-      "weight": "",
+      "weight": "400",
+      "style": ""
+    },
+    {
+      "aifont": "Roboto-Light",
+      "family": "Roboto,arial,helvetica,sans-serif",
+      "weight": "300",
+      "style": ""
+    },
+    {
+      "aifont": "Roboto-Thin",
+      "family": "Roboto,arial,helvetica,sans-serif",
+      "weight": "300",
       "style": ""
     },
     {
@@ -17,7 +29,13 @@
     {
       "aifont": "Roboto-Italic",
       "family": "Roboto,arial,helvetica,sans-serif",
-      "weight": "",
+      "weight": "200",
+      "style": "italic"
+    },
+    {
+      "aifont": "Roboto-Medium",
+      "family": "Roboto,arial,helvetica,sans-serif",
+      "weight": "500",
       "style": "italic"
     }
   ]
