--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "tree-heat",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -33,6 +33,6 @@
     "USE_EYE_NAV": false,
     "USE_COVER_HED": false,
     "IS_EMBED": false,
-    "DOC_URL": null
+    "DOC_URL": "https://docs.google.com/document/d/1xs61OQKvX3R-opC-o0jUD8n-ucCSNGxyZ1D6lBfAEx0/edit"
   }
 }
